--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo_C_crm.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/arial" rel="stylesheet">            
+    <link href="https://fonts.cdnfonts.com/css/georgia" rel="stylesheet"> 
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">      
     <title>Cosmic CRM</title>
   </head>
   <body>
